fix: issue with oveflow on mobile.

--- a/src/screens/Four/style.css
+++ b/src/screens/Four/style.css
@@ -13,7 +13,6 @@ body {
 
 nav {
   z-index: 10;
-  position: relative;
 }
 
 .pos {
@@ -234,6 +233,7 @@ svg {
 .hero-image {
   display: flex;
   position: relative;
+  overflow-x: hidden;
 }
 
 figure {
@@ -243,8 +243,8 @@ figure {
 
 .image {
   width: 100%;
-  position: absolute;
   height: 100%;
+  position: absolute;
   background-size: cover;
   background-position: center;
   will-change: transform, opacity;
@@ -341,6 +341,7 @@ div.active {
     display: flex;
     margin-bottom: 0;
     flex: 0.4;
+    overflow-x: unset;
   }
 
   .buttons {
